cmake_minimum_required(VERSION 3.20)
project(LeetCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(LeetCode main.cpp 1014最佳观光组合.cpp "121. 买卖股票的最佳时机.cpp" "122. 买卖股票的最佳时机 II.cpp" "309. 最佳买卖股票时机含冷冻期.cpp" "714. 买卖股票的最佳时机含手续费.cpp" "22. 括号生成.cpp" "139. 单词拆分.cpp" "413. 等差数列划分.cpp" "264. 丑数 II.cpp" "704. 二分查找.cpp" "118. 杨辉三角.cpp" "119. 杨辉三角 II.cpp" "278. 第一个错误的版本.cpp" "35. 搜索插入位置.cpp")
